--- a/ui/src/views/dashboard/Dashboard.less
+++ b/ui/src/views/dashboard/Dashboard.less
@@ -4,7 +4,6 @@
   flex: 1;
 
   &__row {
-    margin-bottom: 24px;
     flex-wrap: wrap;
 
     .semi-col {
@@ -16,7 +15,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    margin: 0 !important;
+    margin-top: 16px;
 
     .semi-card-body {
       flex: 1;
