--- a/ui/src/views/user/Users.less
+++ b/ui/src/views/user/Users.less
@@ -1,8 +1,5 @@
 .users {
   &__newButton {
-    margin-top: 1rem !important;
-    float: left;
     margin-bottom: 1rem !important;
-    margin-left: 1rem;
   }
 }
